apps/nodered/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodered-ingress
  namespace: default
  labels:
    app: nodered
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nodered.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodered
                port:
                  number: 1880
